--- a/configs/config_2d_l2.yaml
+++ b/configs/config_2d_l2.yaml
@@ -7,10 +7,10 @@ layer_specs: [3072, 128, 10]  #Represents a 2 layer NN. 3072 is the input layer
 activation: "tanh"
 
 # The learning rate to be used for training.
-learning_rate: 0.00001
+learning_rate: 0.0001
 
 # Number of training samples per batch to be passed to network
-batch_size: 64
+batch_size: 128
 
 # Number of epochs to train the model
 epochs: 100
@@ -22,13 +22,13 @@ early_stop: True
 early_stop_epoch: 5
 
 # Regularization constant
-regularization_penalty: 0
+regularization_penalty: 0.0001
 
 # Use momentum for training
-momentum: True
+momentum: False
 
 # Value for the parameter 'gamma' in momentum
-momentum_gamma: 0.6
+momentum_gamma: 0.9
 
 #Weight Type
 weight_type: "random"
