--- a/configs/config_2e_sigmoid.yaml
+++ b/configs/config_2e_sigmoid.yaml
@@ -4,16 +4,16 @@
 layer_specs: [3072, 128, 10]  #Represents a 2 layer NN. 3072 is the input layer
 
 # Type of non-linear activation function to be used for the layers.
-activation: "tanh"
+activation: "sigmoid"
 
 # The learning rate to be used for training.
-learning_rate: 0.0001
+learning_rate: 0.00001
 
 # Number of training samples per batch to be passed to network
-batch_size: 128
+batch_size: 64
 
 # Number of epochs to train the model
-epochs: 2
+epochs: 100
 
 # Flag to enable early stopping
 early_stop: True
@@ -22,13 +22,13 @@ early_stop: True
 early_stop_epoch: 5
 
 # Regularization constant
-regularization_penalty: 0.0001
+regularization_penalty: 0
 
 # Use momentum for training
-momentum: False
+momentum: True
 
 # Value for the parameter 'gamma' in momentum
-momentum_gamma: 0.9
+momentum_gamma: 0.7
 
 #Weight Type
 weight_type: "random"
